--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <h1>行船入三潭</h1>
     <p>这里是从README.md转换来的内容。</p>
     <!-- 这里可以添加更多的HTML内容 -->
+    <ul>
+        <li><a href="articles/my-first-article">我的第一篇文章</a></li>
+    </ul>
+    <ul>
+    {% for post in site.posts %}
+        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </ul>
+
 </body>
 </html>
