--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>行船入三潭</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>行船入三潭</h1>
-    <p>这里是从README.md转换来的内容。</p>
-    <!-- 这里可以添加更多的HTML内容 -->
     <ul>
         <li><a href="articles/my-first-article">我的第一篇文章</a></li>
-    </ul>
-    <ul>
-    {% for post in site.posts %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
     </ul>
 
 </body>
