--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <ul>
         <li><a href="articles/my-first-article">我的第一篇文章</a></li>
     </ul>
+    <ul>
+        {% for post in site.posts %}
+            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
 
 </body>
 </html>
