--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>行船入三潭</h1>
     <ul>
-        <li><a href="articles/my-first-article">我的第一篇文章</a></li>
+        <li><a href="_post/2024-02-23.md">我的第一篇文章</a></li>
     </ul>
     <ul>
         {% for post in site.posts %}
