--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 <body>
     <h1>行船入三潭</h1>
     <ul>
-        <li><a href="_posts/2024-02-23-001.md">我的第一篇文章</a></li>
-    </ul>
-    <ul>
-        {% for post in site.posts %}
-            <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
+        <li><a href="_posts/2024-02-23-001">我的第一篇文章</a></li>
     </ul>
 
 </body>
