--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>行船入三潭</h1>
     <ul>
-        <li><a href="articles/my-first-article.md">我的第一篇文章</a></li>
+        <li><a href="_posts/2024-02-23-001.md">我的第一篇文章</a></li>
     </ul>
 
 </body>
