--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ layout: default
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>行船入三潭</title>
+    <title>鸥衔海际归</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>行船入三潭</h1>
+    <h1>鸥衔海际归</h1>
     <ul>
       {% for post in site.posts %}
         <li>
