--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul>
           {% for post in site.posts %}
             <li>
-              <a href="{{ post.url }}">{{ post.title }}</a>
+              <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
             </li>
           {% endfor %}
         </ul>
